<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AjoutModule">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/intitule"
        android:id="@+id/textViewIntitule"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/EditTextIntitule"
            android:height="30dp"

            />
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/acronyme"
        android:textSize="25dp"
        android:id="@+id/textViewAcronyme"/>

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
            android:id="@+id/EditTextAcro"
           android:height="30dp"
           android:background="@drawable/rectangle"
           />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/credit"
        android:textSize="25dp"
        android:id="@+id/textViewCredit"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"
        android:min="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/description"
        android:textSize="25dp"
        android:id="@+id/textViewDescript"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextDescrpt"
        android:height="70dp"
        android:background="@drawable/rectangle"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"/>


</LinearLayout>